when click on participate it gives all the events you participate in. Can view all the events user created